# oxker

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  _typos.toml  create_release.sh  docker-compose.yml  install.sh  oxker  postgres.Dockerfile  start_oxker.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: release-body.md  screenshot_02.webm
.github/ISSUE_TEMPLATE/: bug.md  feature.md  refactor.md
.github/workflows/: create_release_and_build.yml
containerised/: DOCKERHUB_README.md  Dockerfile  Dockerfile_dev  create_docker_images.sh  platform.sh  start_oxker.sh  target.sh
docker/: Dockerfile.unhealthy  docker-compose.yml
example_config/: example.config.json  example.config.jsonc  example.config.toml
src/: app_error.rs  exec.rs  main.rs  parse_args.rs
src/app_data/: container_state.rs  mod.rs
src/config/: color_parser.rs  config.toml  keymap_parser.rs  mod.rs  parse_args.rs  parse_config_file.rs
src/docker_data/: message.rs  mod.rs
src/input_handler/: message.rs  mod.rs
src/parse_args/: mod.rs
src/ui/: color_match.rs  draw_blocks.rs  gui_state.rs  mod.rs  redraw.rs
src/ui/draw_blocks/: chart_bandwidth.rs  charts.rs  commands.rs  containers.rs  delete_confirm.rs  error.rs  filter.rs  headers.rs  help.rs  info.rs  inspect.json  inspect.rs  logs.rs  mod.rs  popup.rs  ports.rs  search_logs.rs  stop_confirm.rs
src/ui/draw_blocks/snapshots/: oxker__ui__draw_blocks__chart_bandwidth__tests__draw_blocks_charts_running_none.snap  oxker__ui__draw_blocks__chart_bandwidth__tests__draw_blocks_charts_running_with_data_rx.snap  oxker__ui__draw_blocks__chart_bandwidth__tests__draw_blocks_charts_running_with_data_tx.snap  oxker__ui__draw_blocks__charts__tests__draw_blocks_charts_custom_colors.snap  oxker__ui__draw_blocks__charts__tests__draw_blocks_charts_running_none.snap  oxker__ui__draw_blocks__commands__tests__draw_blocks_commands_custom_colors_running.snap  oxker__ui__draw_blocks__commands__tests__draw_blocks_commands_none.snap  oxker__ui__draw_blocks__commands__tests__draw_blocks_commands_some_paused.snap  oxker__ui__draw_blocks__containers__tests__draw_blocks_containers_colors.snap  oxker__ui__draw_blocks__containers__tests__draw_blocks_containers_custom_colors_state_removing.snap  oxker__ui__draw_blocks__containers__tests__draw_blocks_containers_custom_colors_state_restarting.snap  oxker__ui__draw_blocks__containers__tests__draw_blocks_containers_custom_colors_state_unhealthy.snap  oxker__ui__draw_blocks__containers__tests__draw_blocks_containers_dead.snap  oxker__ui__draw_blocks__containers__tests__draw_blocks_containers_exited.snap  oxker__ui__draw_blocks__containers__tests__draw_blocks_containers_long_name_image.snap  oxker__ui__draw_blocks__containers__tests__draw_blocks_containers_none.snap  oxker__ui__draw_blocks__containers__tests__draw_blocks_containers_paused.snap  oxker__ui__draw_blocks__containers__tests__draw_blocks_containers_restarting.snap  oxker__ui__draw_blocks__containers__tests__draw_blocks_containers_unhealthy.snap  oxker__ui__draw_blocks__containers__tests__draw_blocks_containers_unknown.snap  oxker__ui__draw_blocks__delete_confirm__tests__draw_blocks_delete.snap  oxker__ui__draw_blocks__delete_confirm__tests__draw_blocks_delete_custom_keymap_one_definition.snap  oxker__ui__draw_blocks__delete_confirm__tests__draw_blocks_delete_custom_keymap_one_two_definition.snap  oxker__ui__draw_blocks__delete_confirm__tests__draw_blocks_delete_custom_keymap_two_definition.snap  oxker__ui__draw_blocks__delete_confirm__tests__draw_blocks_delete_long_name.snap  oxker__ui__draw_blocks__error__tests__draw_blocks_error_custom_colors.snap  oxker__ui__draw_blocks__error__tests__draw_blocks_error_custom_keymap.snap  oxker__ui__draw_blocks__error__tests__draw_blocks_error_custom_keymap_one_two_definitions.snap  oxker__ui__draw_blocks__error__tests__draw_blocks_error_custom_keymap_two_definitions.snap  oxker__ui__draw_blocks__error__tests__draw_blocks_error_docker_connect_error.snap  oxker__ui__draw_blocks__error__tests__draw_blocks_error_docker_connect_error_custom_host.snap  oxker__ui__draw_blocks__filter__tests__draw_blocks_filter_row.snap  oxker__ui__draw_blocks__filter__tests__draw_blocks_filter_row_text.snap  oxker__ui__draw_blocks__headers__tests__draw_blocks_headers_animation.snap  (+70 more)
