[package]
name = "oxker"
version = "0.8.0"
edition = "2021"
authors = ["Jack Wills <email@mrjackwills.com>"]
description = "A simple tui to view & control docker containers"
repository = "https://github.com/mrjackwills/oxker"
homepage = "https://github.com/mrjackwills/oxker"
license = "MIT"
readme = "README.md"
keywords = ["docker", "tui", "tokio", "terminal", "podman"]
categories = ["command-line-utilities"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
expect_used = "warn"
todo = "warn"
unused_async = "warn"
unwrap_used = "warn"
module_name_repetitions = "allow"
doc_markdown = "allow"
similar_names = "allow"

[dependencies]
anyhow = "1.0"
bollard = "0.18"
cansi = "2.2"
clap = { version = "4.5", features = ["color", "derive", "unicode"] }
crossterm = "0.28"
directories = "5.0"
futures-util = "0.3"
parking_lot = { version = "0.12" }
ratatui = "0.29"
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["fast-rng", "v4"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
