[package]
name = "oxker"
version = "0.13.0"
edition = "2024"
authors = ["Jack Wills <email@mrjackwills.com>"]
description = "A simple tui to view & control docker containers"
repository = "https://github.com/mrjackwills/oxker"
homepage = "https://github.com/mrjackwills/oxker"
license = "MIT"
rust-version = "1.90.0"
readme = "README.md"
keywords = ["docker", "tui", "tokio", "terminal", "podman"]
categories = ["command-line-utilities"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
expect_used = "warn"
todo = "warn"
unused_async = "warn"
unwrap_used = "warn"
module_name_repetitions = "allow"
doc_markdown = "allow"
similar_names = "allow"

[dependencies]
anyhow = "1.0"
bollard = "0.20"
cansi = "2.2"
clap = { version = "4.5", features = ["color", "derive", "unicode"] }
crossterm = "0.29"
directories = "6.0"
futures-util = "0.3"
jiff = { version = "0.2", features = ["tzdb-bundle-always"] }
parking_lot = { version = "0.12" }
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
serde_jsonc = "1.0"
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
toml = { version = "1.0", default-features = false, features = ["parse", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.21", features = ["fast-rng", "v4"] }

[dev-dependencies]
insta = "1.46"
serde_json = { version = "1.0", features = ["preserve_order"]}

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false


